# talking-vit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: generate_example.py  train.py
src/talking_vit/models/: talking_vit.py
src/talking_vit/trainers/: __init__.py  dataset.py  trainer.py
