[project]
name = "talking-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibaut CHAUFFIER", email = "tchauffi@gmail.com" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "torchvision>=0.27.0",
    "transformers>=4.40.0",
]

[project.scripts]
talking-vit = "talking_vit:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "ruff>=0.15.13",
]
